--- a/mobile/web/css/shared.css
+++ b/mobile/web/css/shared.css
@@ -28,3 +28,11 @@ html, body {
     margin-right: 12px;
     margin-top: 8px;
 }
+a {
+    color: #337ab7;
+    text-decoration: none;
+}
+a:hover {
+    color: #23527c;
+    text-decoration: underline;
+}
