Add logout button in mobile web

--- a/mobile/web/css/shared.css
+++ b/mobile/web/css/shared.css
@@ -28,6 +28,12 @@ html, body {
     margin-right: 12px;
     margin-top: 8px;
 }
+.navbar-link:hover {
+    cursor: pointer;
+}
+.flex-spacer {
+    flex: 1 1 auto;
+}
 a {
     color: #337ab7;
     text-decoration: none;
