--- a/mobile/web/css/chat.css
+++ b/mobile/web/css/chat.css
@@ -31,7 +31,7 @@
 	font-family: 'exo 2', sans-serif;
 	font-weight: 400;
 	color: #333333;
-	overflow-y: hidden; /* this needs to be changed by javascript */
+	/* overflow-y: hidden; /* this needs to be changed by javascript */ */
 }
 .chat-input-textarea:focus {
 	border: 1px solid #ffb524;
@@ -49,6 +49,7 @@
 	outline: none;
 	font-family: 'exo 2', sans-serif;
 	font-weight: 200;
+	margin-top: auto;
 }
 .chat-input-button:hover {
 	background-color: #ffb524;
